log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Wed 29 Mar 2023 01:36:04 PM UTC: 
 arraylist.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f3f0dd0
Wed 29 Mar 2023 01:38:38 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9557700
Wed 29 Mar 2023 01:49:32 PM UTC: 
 arraylist.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:33:66: error: expected ‘)’ before ‘;’ token
   33 |     l -> data = realloc(l-> data, l -> capacity * sizeof(void **);
      |                                                                  ^
      |                                                                  )
arraylist.c:33:67: error: expected ‘;’ before ‘}’ token
   33 |     l -> data = realloc(l-> data, l -> capacity * sizeof(void **);
      |                                                                   ^
      |                                                                   ;
   34 |   }
      |   ~                                                                
Compilation failed
1a06984
Wed 29 Mar 2023 01:55:22 PM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:33:66: error: expected ‘)’ before ‘;’ token
   33 |     l -> data = realloc(l-> data, l -> capacity * sizeof(void **);
      |                                                                  ^
      |                                                                  )
arraylist.c:33:67: error: expected ‘;’ before ‘}’ token
   33 |     l -> data = realloc(l-> data, l -> capacity * sizeof(void **);
      |                                                                   ^
      |                                                                   ;
   34 |   }
      |   ~                                                                
arraylist.c: In function ‘clean’:
arraylist.c:60:7: error: too many arguments to function ‘createList’
   60 |   l = createList(l);
      |       ^~~~~~~~~~
arraylist.c:13:12: note: declared here
   13 | ArrayList *createList(void)
      |            ^~~~~~~~~~
Compilation failed
1cf93c4
Wed 29 Mar 2023 01:55:35 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:33:66: error: expected ‘)’ before ‘;’ token
   33 |     l -> data = realloc(l-> data, l -> capacity * sizeof(void **);
      |                                                                  ^
      |                                                                  )
arraylist.c:33:67: error: expected ‘;’ before ‘}’ token
   33 |     l -> data = realloc(l-> data, l -> capacity * sizeof(void **);
      |                                                                   ^
      |                                                                   ;
   34 |   }
      |   ~                                                                
arraylist.c: In function ‘clean’:
arraylist.c:60:8: error: too many arguments to function ‘createList’
   60 |   l = *createList(l);
      |        ^~~~~~~~~~
arraylist.c:13:12: note: declared here
   13 | ArrayList *createList(void)
      |            ^~~~~~~~~~
arraylist.c:60:7: error: incompatible types when assigning to type ‘ArrayList *’ {aka ‘struct ArrayList *’} from type ‘ArrayList’ {aka ‘struct ArrayList’}
   60 |   l = *createList(l);
      |       ^
Compilation failed
8f56afa
Wed 29 Mar 2023 01:56:06 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:33:66: error: expected ‘)’ before ‘;’ token
   33 |     l -> data = realloc(l-> data, l -> capacity * sizeof(void **);
      |                                                                  ^
      |                                                                  )
arraylist.c:33:67: error: expected ‘;’ before ‘}’ token
   33 |     l -> data = realloc(l-> data, l -> capacity * sizeof(void **);
      |                                                                   ^
      |                                                                   ;
   34 |   }
      |   ~                                                                
Compilation failed
fd1d357
Wed 29 Mar 2023 02:00:19 PM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:33:66: error: expected ‘)’ before ‘;’ token
   33 |     l -> data = realloc(l-> data, l -> capacity * sizeof(void **);
      |                                                                  ^
      |                                                                  )
arraylist.c:33:67: error: expected ‘;’ before ‘}’ token
   33 |     l -> data = realloc(l-> data, l -> capacity * sizeof(void **);
      |                                                                   ^
      |                                                                   ;
   34 |   }
      |   ~                                                                
Compilation failed
90ea033
Wed 29 Mar 2023 02:02:31 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
ce9542a
Wed 29 Mar 2023 02:12:57 PM UTC: 
 arraylist.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
d82978a
Wed 29 Mar 2023 02:14:42 PM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|3
total_score: 30/70
c302fdd
Wed 29 Mar 2023 02:15:11 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 40/70
1f533e5
Wed 29 Mar 2023 02:16:00 PM UTC: 
 arraylist.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  6|2
total_score: 40/70
e196b4a
Wed 29 Mar 2023 02:27:03 PM UTC: 
 arraylist.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘get’:
arraylist.c:71:12: error: statement with no effect [-Werror=unused-value]
   71 |   l -> data[i];
      |   ~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
d0c0767
Wed 29 Mar 2023 02:27:12 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|1
total_score: 50/70
57f362d
Wed 29 Mar 2023 02:29:21 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|1
total_score: 50/70
0a5e0c8
Wed 29 Mar 2023 02:40:22 PM UTC: 
 arraylist.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:68:8: error: ‘auxIn’ undeclared (first use in this function); did you mean ‘aux’?
   68 |   for (auxIn = i ; auxIn < l -> size ; auxIn++)
      |        ^~~~~
      |        aux
arraylist.c:68:8: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:72:12: error: dereferencing ‘void *’ pointer [-Werror]
   72 |     return *aux;
      |            ^~~~
arraylist.c:72:12: error: void value not ignored as it ought to be
arraylist.c:73:1: error: control reaches end of non-void function [-Werror=return-type]
   73 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cc8d08b
Wed 29 Mar 2023 02:40:30 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:68:8: error: ‘auxIn’ undeclared (first use in this function); did you mean ‘aux’?
   68 |   for (auxIn = i ; auxIn < l -> size ; auxIn++)
      |        ^~~~~
      |        aux
arraylist.c:68:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
acc0493
